--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         body {
             background-color: var(--bg-color);
             color: var(--text-color);
-            line-height: 1.7;
+            /* [수정] 줄 간격을 1.7 -> 1.5로 좁힘 */
+            line-height: 1.5; 
             font-weight: 400; 
         }
 
@@ -101,7 +102,7 @@
         h1 {
             font-size: 30px;
             font-weight: 400;
-            line-height: 1.4;
+            line-height: 1.3; /* [수정] 제목 줄 간격 축소 */
             margin-bottom: 20px;
             word-break: keep-all;
             color: #222;
@@ -113,7 +114,7 @@
             gap: 10px;
             font-size: 14px;
             color: #888;
-            margin-bottom: 40px;
+            margin-bottom: 30px; /* [수정] 간격 축소 */
             border-bottom: 1px solid #eee;
             padding-bottom: 20px;
         }
@@ -133,7 +134,7 @@
             padding: 30px; 
             text-align: center;
             box-shadow: 0 10px 30px rgba(0, 168, 107, 0.15);
-            margin: 50px 0 20px 0;
+            margin: 40px 0 20px 0; /* [수정] 위쪽 여백 축소 */
             animation: gentle-float 3s ease-in-out infinite;
         }
 
@@ -192,23 +193,37 @@
             background-color: var(--brand-hover);
         }
 
-        /* 파란색 박스 */
-        .blue-info-box {
-            background-color: var(--blue-box-bg);
-            padding: 25px;
-            border-radius: 8px;
-            margin: 30px 0;
-            font-size: 16px;
-            color: #333;
-            line-height: 1.8;
+        /* 본문 스타일 [수정] 문단 간격 축소 */
+        .content p {
+            margin-bottom: 15px; /* 기존 24px -> 15px */
         }
 
-        /* 체크리스트 섹션 스타일 */
+        /* 섹션 제목 [수정] 간격 축소 */
+        h2 {
+            font-size: 22px;
+            font-weight: 400;
+            color: #222;
+            margin-top: 30px; /* 기존 40px -> 30px */
+            margin-bottom: 10px;
+        }
+
+        /* 파란색 박스 [수정] 내부 여백 및 간격 축소 */
+        .blue-info-box {
+            background-color: var(--blue-box-bg);
+            padding: 20px; /* 기존 25px -> 20px */
+            border-radius: 8px;
+            margin: 20px 0; /* 기존 30px -> 20px */
+            font-size: 16px;
+            color: #333;
+            line-height: 1.5; /* 줄 간격 축소 */
+        }
+
+        /* 체크리스트 섹션 스타일 [수정] 간격 축소 */
         .checklist-title {
             font-size: 20px;
             font-weight: 400;
-            margin-top: 40px;
-            margin-bottom: 20px;
+            margin-top: 30px; /* 기존 40px -> 30px */
+            margin-bottom: 15px;
             display: flex;
             align-items: center;
             gap: 8px;
@@ -217,8 +232,8 @@
         .checklist-item {
             display: flex;
             align-items: flex-start;
-            gap: 12px;
-            margin-bottom: 15px;
+            gap: 10px;
+            margin-bottom: 10px; /* 기존 15px -> 10px */
             font-size: 16px;
             color: #444;
             cursor: pointer;
@@ -230,7 +245,7 @@
             height: 20px;
             border: 2px solid #555;
             border-radius: 3px;
-            margin-top: 4px;
+            margin-top: 3px;
             cursor: pointer;
             display: flex;
             align-items: center;
@@ -319,8 +334,7 @@
                 <p>
                     Loaning.ai는 이러한 불편함을 해결하기 위해 &lt;내집 마련 모기지 가이드&gt;를 준비했습니다. 계약 체결부터 클로징까지의 여정을 한 권에 담았어요.
                 </p>
-                <p style="margin-top: 15px;">
-                    AI 기반 구조화·자동화 시스템을 통해, 일반적인 클로징 기간을 70% 단축시킨 Loaning.ai의 안전하고 신속한 모기지 솔루션을 만나 보세요.
+                <p style="margin-top: 10px;"> AI 기반 구조화·자동화 시스템을 통해, 일반적인 클로징 기간을 70% 단축시킨 Loaning.ai의 안전하고 신속한 모기지 솔루션을 만나 보세요.
                 </p>
             </div>
 
@@ -355,8 +369,7 @@
                 </form>
             </div>
             
-            <div style="opacity: 0.3; margin-top: 50px;">
-                <hr style="border:0; border-top:1px solid #eee; margin: 30px 0;">
+            <div style="opacity: 0.3; margin-top: 40px;"> <hr style="border:0; border-top:1px solid #eee; margin: 20px 0;">
                 <h3>Chapter 1. 모기지 프로세스 A to Z</h3>
                 <p>
                     미국에서 집을 살 때 가장 먼저 해야 할 일은 무엇일까요? 바로 'Pre-Approval Letter'를 받는 것입니다. 
